@@ -21,6 +21,7 @@ package org.elasticsearch.client.watcher;
 import org.apache.lucene.util.LuceneTestCase;
 import org.elasticsearch.client.AbstractResponseTestCase;
 import org.elasticsearch.common.bytes.BytesReference;
+import org.elasticsearch.common.time.DateUtils;
 import org.elasticsearch.common.xcontent.ToXContent;
 import org.elasticsearch.common.xcontent.XContentBuilder;
 import org.elasticsearch.common.xcontent.XContentParser;
@@ -32,11 +33,7 @@ import org.elasticsearch.xpack.core.watcher.transport.actions.get.GetWatchRespon
 import org.elasticsearch.xpack.core.watcher.watch.WatchStatus;
 
 import java.io.IOException;
-import java.time.Clock;
-import java.time.Instant;
-import java.time.ZoneOffset;
 import java.time.ZonedDateTime;
-import java.util.Collections;
 import java.util.HashMap;
 import java.util.Map;
 
@@ -84,7 +81,7 @@ public class GetWatchResponseTests extends AbstractResponseTestCase<GetWatchResp
 
     @Override
     protected ToXContent.Params getParams() {
-        return new ToXContent.MapParams(Collections.singletonMap("hide_headers", "false"));
+        return new ToXContent.MapParams(Map.of("hide_headers", "false"));
     }
 
     private static BytesReference simpleWatch() {
@@ -112,15 +109,15 @@ public class GetWatchResponseTests extends AbstractResponseTestCase<GetWatchResp
 
     private static WatchStatus randomWatchStatus() {
         long version = randomLongBetween(-1, Long.MAX_VALUE);
-        WatchStatus.State state = new WatchStatus.State(randomBoolean(), nowWithMillisResolution());
+        WatchStatus.State state = new WatchStatus.State(randomBoolean(), DateUtils.nowWithMillisResolution());
         ExecutionState executionState = randomFrom(ExecutionState.values());
-        ZonedDateTime lastChecked = LuceneTestCase.rarely() ? null : nowWithMillisResolution();
-        ZonedDateTime lastMetCondition = LuceneTestCase.rarely() ? null : nowWithMillisResolution();
+        ZonedDateTime lastChecked = LuceneTestCase.rarely() ? null : DateUtils.nowWithMillisResolution();
+        ZonedDateTime lastMetCondition = LuceneTestCase.rarely() ? null : DateUtils.nowWithMillisResolution();
         int size = randomIntBetween(0, 5);
         Map<String, ActionStatus> actionMap = new HashMap<>();
         for (int i = 0; i < size; i++) {
             ActionStatus.AckStatus ack = new ActionStatus.AckStatus(
-                nowWithMillisResolution(),
+                DateUtils.nowWithMillisResolution(),
                 randomFrom(ActionStatus.AckStatus.State.values())
             );
             ActionStatus actionStatus = new ActionStatus(
@@ -140,16 +137,16 @@ public class GetWatchResponseTests extends AbstractResponseTestCase<GetWatchResp
     }
 
     private static ActionStatus.Throttle randomThrottle() {
-        return new ActionStatus.Throttle(nowWithMillisResolution(), randomAlphaOfLengthBetween(10, 20));
+        return new ActionStatus.Throttle(DateUtils.nowWithMillisResolution(), randomAlphaOfLengthBetween(10, 20));
     }
 
     private static ActionStatus.Execution randomExecution() {
         if (randomBoolean()) {
             return null;
         } else if (randomBoolean()) {
-            return ActionStatus.Execution.failure(nowWithMillisResolution(), randomAlphaOfLengthBetween(10, 20));
+            return ActionStatus.Execution.failure(DateUtils.nowWithMillisResolution(), randomAlphaOfLengthBetween(10, 20));
         } else {
-            return ActionStatus.Execution.successful(nowWithMillisResolution());
+            return ActionStatus.Execution.successful(DateUtils.nowWithMillisResolution());
         }
     }
 
@@ -201,9 +198,5 @@ public class GetWatchResponseTests extends AbstractResponseTestCase<GetWatchResp
 
     private static ActionStatus.Throttle convertActionStatusThrottle(org.elasticsearch.client.watcher.ActionStatus.Throttle throttle) {
         return new ActionStatus.Throttle(throttle.timestamp(), throttle.reason());
-    }
-
-    private static ZonedDateTime nowWithMillisResolution() {
-        return Instant.ofEpochMilli(Clock.systemUTC().millis()).atZone(ZoneOffset.UTC);
     }
 }
