@@ -52,7 +52,6 @@ import org.junit.Before;
 import org.junit.BeforeClass;
 
 import java.io.IOException;
-import java.util.Collections;
 import java.util.HashSet;
 import java.util.Set;
 import java.util.concurrent.CountDownLatch;
@@ -101,7 +100,7 @@ public class TransportAddVotingConfigExclusionsActionTests extends ESTestCase {
                 name,
                 buildNewFakeTransportAddress(),
                 emptyMap(),
-                Collections.singleton(DiscoveryNodeRole.MASTER_ROLE),
+                Set.of(DiscoveryNodeRole.MASTER_ROLE),
                 Version.CURRENT);
     }
 
