@@ -25,7 +25,7 @@ import org.elasticsearch.common.io.stream.StreamOutput;
 import org.elasticsearch.test.ESTestCase;
 
 import java.io.IOException;
-import java.util.Collections;
+import java.util.List;
 
 import static org.hamcrest.Matchers.is;
 
@@ -35,21 +35,19 @@ public class ShardsAcknowledgedResponseTests extends ESTestCase {
         ShardsAcknowledgedResponse testInstance = new TestImpl(true, true);
 
         ShardsAcknowledgedResponse result =
-            copyWriteable(testInstance, new NamedWriteableRegistry(Collections.emptyList()),
-                in -> new TestImpl(in, true, true), Version.CURRENT);
+            copyWriteable(testInstance, new NamedWriteableRegistry(List.of()), in -> new TestImpl(in, true), Version.CURRENT);
         assertThat(result.isAcknowledged(), is(true));
         assertThat(result.isShardsAcknowledged(), is(true));
 
-        result = copyWriteable(testInstance, new NamedWriteableRegistry(Collections.emptyList()),
-            in -> new TestImpl(in, false, false), Version.CURRENT);
-        assertThat(result.isAcknowledged(), is(false));
+        result = copyWriteable(testInstance, new NamedWriteableRegistry(List.of()), in -> new TestImpl(in, false), Version.CURRENT);
+        assertThat(result.isAcknowledged(), is(true));
         assertThat(result.isShardsAcknowledged(), is(false));
     }
 
     private static class TestImpl extends ShardsAcknowledgedResponse {
 
-        private TestImpl(StreamInput in, boolean readShardsAcknowledged, boolean readAcknowledged) throws IOException {
-            super(in, readShardsAcknowledged, readAcknowledged);
+        private TestImpl(StreamInput in, boolean readShardsAcknowledged) throws IOException {
+            super(in, readShardsAcknowledged);
         }
 
         private TestImpl(boolean acknowledged, boolean shardsAcknowledged) {
