@@ -5,27 +5,26 @@
  */
 package org.elasticsearch.xpack.sql.expression.function.scalar.datetime;
 
-import org.elasticsearch.xpack.sql.expression.Expression;
-import org.elasticsearch.xpack.sql.expression.Expressions;
-import org.elasticsearch.xpack.sql.expression.gen.pipeline.Pipe;
-import org.elasticsearch.xpack.sql.tree.NodeInfo;
-import org.elasticsearch.xpack.sql.tree.Source;
-import org.elasticsearch.xpack.sql.type.DataType;
+import org.elasticsearch.xpack.ql.expression.Expression;
+import org.elasticsearch.xpack.ql.expression.Expressions;
+import org.elasticsearch.xpack.ql.expression.gen.pipeline.Pipe;
+import org.elasticsearch.xpack.ql.tree.NodeInfo;
+import org.elasticsearch.xpack.ql.tree.Source;
+import org.elasticsearch.xpack.ql.type.DataType;
+import org.elasticsearch.xpack.ql.type.DataTypes;
 
 import java.time.ZoneId;
 import java.time.ZonedDateTime;
 import java.time.temporal.ChronoUnit;
-import java.util.Arrays;
-import java.util.HashSet;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.function.BiFunction;
 
 import static org.elasticsearch.common.logging.LoggerMessageFormat.format;
-import static org.elasticsearch.xpack.sql.expression.TypeResolutions.isDate;
-import static org.elasticsearch.xpack.sql.expression.TypeResolutions.isInteger;
-import static org.elasticsearch.xpack.sql.expression.TypeResolutions.isString;
+import static org.elasticsearch.xpack.ql.expression.TypeResolutions.isInteger;
+import static org.elasticsearch.xpack.ql.expression.TypeResolutions.isString;
+import static org.elasticsearch.xpack.sql.expression.SqlTypeResolutions.isDate;
 
 public class DateAdd extends ThreeArgsDateTimeFunction {
 
@@ -57,7 +56,7 @@ public class DateAdd extends ThreeArgsDateTimeFunction {
 
         Part(BiFunction<ZonedDateTime, Integer, ZonedDateTime> addFunction, String... aliases) {
             this.addFunction = addFunction;
-            this.aliases = new HashSet<>(Arrays.asList(aliases));
+            this.aliases = Set.of(aliases);
         }
 
         @Override
@@ -122,7 +121,7 @@ public class DateAdd extends ThreeArgsDateTimeFunction {
 
     @Override
     public DataType dataType() {
-        return DataType.DATETIME;
+        return DataTypes.DATETIME;
     }
 
     @Override
